--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ChatMobile</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_map">Map</string>
     <string name="title_notifications">Notifications</string>
     <string name="login_title">Login</string>
     <string name="login_button">Login</string>
