--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="navigation_my_profile">My Profile</string>
     <string name="profile_share">Share your profile</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
